# puremvc-python-multicore-framework

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  VERSION  fabfile.py  license.txt  pyproject.toml  setup.py  version.txt
.github/workflows/: deploy-docs.yml  python-package.yml
docs/: api-objects.txt  class-tree.html  help.html  identifier-index.html  index.html  module-tree.html  puremvc-module.html  puremvc-pysrc.html  puremvc.MultitonError-class.html  puremvc.core-module.html  puremvc.core-pysrc.html  puremvc.core.Controller-class.html  puremvc.core.Model-class.html  puremvc.core.View-class.html  puremvc.interfaces-module.html  puremvc.interfaces-pysrc.html  puremvc.interfaces.ICommand-class.html  puremvc.interfaces.IController-class.html  puremvc.interfaces.IFacade-class.html  puremvc.interfaces.IMediator-class.html  puremvc.interfaces.IModel-class.html  puremvc.interfaces.INotification-class.html  puremvc.interfaces.INotifier-class.html  puremvc.interfaces.IObserver-class.html  puremvc.interfaces.IProxy-class.html  puremvc.interfaces.IView-class.html  puremvc.patterns-module.html  puremvc.patterns-pysrc.html  puremvc.patterns.command-module.html  puremvc.patterns.command-pysrc.html  puremvc.patterns.command.MacroCommand-class.html  puremvc.patterns.command.SimpleCommand-class.html  puremvc.patterns.facade-module.html  puremvc.patterns.facade-pysrc.html  puremvc.patterns.facade.Facade-class.html  puremvc.patterns.mediator-module.html  puremvc.patterns.mediator-pysrc.html  puremvc.patterns.mediator.Mediator-class.html  puremvc.patterns.observer-module.html  puremvc.patterns.observer-pysrc.html  (+18 more)
docs/source/: conf.py  puremvc.interfaces.rst  puremvc.patterns.command.rst  puremvc.patterns.mediator.rst  puremvc.patterns.rst  puremvc.rst
src/puremvc/: __init__.py  core.py  interfaces.py
test/core/: Controller_test.py  Model_test.py  View_test.py
tests/: main.py
tests/core/: controller.py  model.py  view.py
tests/patterns/: command.py  facade.py  mediator.py  proxy.py  (+1 more)
(+46 files in other folders)
