[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PureMVC"
version = "2.0.1"
requires-python = ">=3.8"
authors = [{ name = "Saad Shams", email = "saad.shams@puremvc.org" }]
description = "PureMVC Multicore Framework"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["puremvc", "mvc", "model", "view", "controller", "patterns"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://puremvc.org"
Source = "https://github.com/PureMVC/puremvc-python-multicore-framework"
Documentation = "https://puremvc.org/pages/docs/python/multicore"