[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PureMVC"
version = "2.0.2"
requires-python = ">=3.8"
authors = [{ name = "Saad Shams", email = "saad.shams@puremvc.org" }]
description = "PureMVC Multicore Framework"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["puremvc", "mvc", "model", "view", "controller", "patterns"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://puremvc.org"
Source = "https://github.com/PureMVC/puremvc-python-multicore-framework"
Documentation = "https://puremvc.org/puremvc-python-multicore-framework/"

[tool.mypy]
python_version = "3.9"
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
strict_equality = true
show_error_codes = true
pretty = true
